<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">云之讯-王云龙</string>
    <string name="talk_list_label">会话列表</string>
    <string name="phone_digits">0123456789</string>
    <string name="nick_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account_color">账户颜色</string>
    <string name="account_color_name_green">绿色</string>
    <string name="account_color_name_orange">橙色</string>
    <string name="account_color_name_red">红色</string>
    <string name="account_color_name_blue">蓝色</string>
    <string name="account_color_name_indigo">靛青色</string>
    <string name="account_color_name_teal">深青色</string>
    <string name="account_color_name_blue_grey">蓝灰色</string>
    <string name="account_color_name_cyan">青色</string>
    <string name="eula_legal_text">Your EULA text here.</string>
    <plurals name="schedule_block_subtitle">
        <item quantity="one"><xliff:g id="number_of_sessions">%1$d</xliff:g> available session</item>
        <item quantity="other"><xliff:g id="number_of_sessions">%1$d</xliff:g> available sessions</item>
    </plurals>
    <plurals name="session_notification_text">
        <item quantity="one">and 1 other starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
        <item quantity="other">and <xliff:g id="num_sessions">%2$d</xliff:g> others starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
    </plurals>
    <plurals name="session_notification_ticker">
        <item quantity="one">1 session is about to start.</item>
        <item quantity="other">%d sessions are about to start.</item>
    </plurals>
    <plurals name="session_plurals">
        <item quantity="one">1 session</item>
        <item quantity="other">%1$d sessions</item>
    </plurals>
    <plurals name="session_notification_title">
        <item quantity="one">1 session is starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
        <item quantity="other"><xliff:g id="num_sessions">%2$d</xliff:g> sessions are starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
    </plurals>
    <string name="about_body"><![CDATA[
        <b>云之讯比赛demo-王云龙(个人开发者)</b><br>
        Version %s<br><br>
        <a href="http://www.ucpaas.com/">云之讯官网</a><br><br>
        <a href="tel:400-097-0020">400-097-0020</a><br><br>
        <a href="tel:18667141169">联系作者</a>
    ]]></string>
    <string name="about_eula">End User License Agreement</string>
    <string name="about_licenses">Open Source Licenses</string>
    <string name="accept">Accept</string>
    <string name="add_account">Add Account</string>
    <string name="add_to_schedule">Add to schedule</string>
    <string name="add_to_schedule_desc">Button to add session to your schedule</string>
    <string name="all_sessions">All Sessions</string>
    <string name="all_themes">All Themes</string>
    <string name="all_topics">All Topics</string>
    <string name="all_types">All Types</string>
    <string name="all_years">All Years</string>
    <string name="attending_in_person">In Person</string>
    <string name="attending_remotely">Remotely</string>
    <string name="browse_events">Browse events</string>
    <string name="browse_sessions">Browse sessions...</string>
    <string name="calltoaction_wifi_configure"><![CDATA[
        <br><br>Tap \'Add Wi-Fi Network\' to proceed.
    ]]></string>
    <string name="calltoaction_wifi_settings"><![CDATA[
        <br><br>Tap \'Open Wi-Fi Settings\' to enable Wi-Fi.
    ]]></string>
    <string name="close_detail_pane">Close detail pane</string>
    <string name="cancel">Cancel</string>
    <string name="data_stale_warning">The data you are viewing may be out of date.</string>
    <string name="day_title_today">Today</string>
    <string name="day_title_tomorrow">Tomorrow</string>
    <string name="day_title_yesterday">Yesterday</string>
    <string name="decline">Decline</string>
    <string name="description_about">关于</string>
    <string name="description_add_schedule">Add to schedule</string>
    <string name="description_app_feedback">App Feedback</string>
    <string name="description_app_feedback_old">Feedback</string>
    <string name="description_captions">Captions</string>
    <string name="description_configure_wifi">设置wifi</string>
    <string name="description_debug" translatable="false">测试模式</string>
    <string name="description_i_o_extended">会话扩展</string>
    <string name="description_map">地图</string>
    <string name="description_presentation">Toggle Screen Output</string>
    <string name="description_refresh">刷新</string>
    <string name="description_remove_schedule">Remove from schedule</string>
    <string name="description_search">Search</string>
    <string name="description_settings">Settings</string>
    <string name="description_setup_wifi_body"><![CDATA[
        Since you\'re attending in person, we can set up this device to access the conference Wi-Fi network (5Ghz only).
        By configuring your Wi-Fi now, you\'ll help prevent network congestion.
    ]]></string>
    <string name="description_share">Share</string>
    <string name="description_social_stream">View Google+ stream</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="empty_captions">No captions found for this session.</string>
    <string name="empty_session_detail">No session details found.</string>
    <string name="empty_sessions">No sessions found.</string>
    <string name="empty_waiting_for_sync">Waiting for sync&#8230;</string>
    <string name="empty_widget_text">No more upcoming sessions.\nSee you next year!</string>
    <string name="empty_widget_text_signed_out">Touch the Google I/O 2014 logo above to sign in and begin using the app.</string>
    <string name="ended_sessions">Ended sessions</string>
    <string name="experts_directory_all_cities">All cities</string>
    <string name="experts_directory_all_countries">All countries</string>
    <string name="experts_directory_attending">attending I/O</string>
    <string name="experts_directory_header_body">The Google Developer Experts (GDE) title recognizes the outstanding developers who exhibit great expertise in one or more Google technologies and share it with the developer community. GDEs are gurus, mentors and evangelists; they create tutorials, code samples, and write books and blogs; they publish videos, drive community projects, and present at events large and small. These independent developers bring their real-world experience and knowledge working with Google technologies to developer communities worldwide.</string>
    <string name="experts_directory_header_dismiss">Got it</string>
    <string name="experts_directory_header_title">Who are the Google Developers Experts?</string>
    <string name="explore_attending_in_person_toast">Attending I/O in person (you can change this in Settings)</string>
    <string name="explore_attending_remotely_toast">Attending I/O remotely (you can change this in Settings)</string>
    <string name="give_feedback">Yes</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="google_account_required_message">To use this application, you must have at least one Google account on your device.</string>
    <string name="google_account_required_title">Google Account Required</string>
    <string name="google_i_o_year">I/O <xliff:g id="year">%1$d</xliff:g></string>
    <string name="got_it">Got it</string>
    <string name="io14_hashtag" translatable="false">#io14</string>
    <string name="live_available">LIVE</string>
    <string name="live_now">LIVE NOW</string>
    <string name="loading">Loading&#8230;</string>
    <string name="login_failed_text">Could not sync your sessions due to an error.</string>
    <string name="login_failed_text_retry">Retry</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="mandatory_update_error">Your application is out of date. You must upgrade it to continue to use it.</string>
    <string name="update_available">There is a newer version of this application available on Google Play.</string>
    <string name="map_at">At %1$s:<![CDATA[<br><b>%2$s</b>]]></string>
    <string name="map_floorcontrol_1" translatable="false">1</string>
    <string name="map_floorcontrol_2" translatable="false">2</string>
    <string name="map_floorcontrol_3" translatable="false">3</string>
    <string name="map_infowindow_text_empty">-</string>
    <string name="map_infowindow_partner_seemore">Touch to see more details</string>
    <string name="map_nearby_button">Nearby</string>
    <string name="map_now_playing">Now playing:<![CDATA[<br><b>%1$s</b>]]></string>
    <string name="map_touch_to_see_session">Touch to see Sessions</string>
    <string name="map_label_moscone" translatable="false">Moscone Center</string>
    <string name="more_information">More information</string>
    <string name="more_sessions">More Sessions</string>
    <string name="my_schedule_tab_desc_a11y">Tap to show your schedule for <xliff:g id="day">%1$s</xliff:g>.</string>
    <string name="my_schedule_page_desc_a11y">Now showing your schedule for <xliff:g id="day">%1$s</xliff:g></string>
    <string name="navdrawer_item_experts_directory">Experts</string>
    <string name="navdrawer_item_experts_directory_a11y">Experts Directory</string>
    <string name="navdrawer_item_explore">Explore</string>
    <string name="navdrawer_item_explore_a11y">Explore Google I/O</string>
    <string name="navdrawer_item_map">Map</string>
    <string name="navdrawer_item_my_schedule">My Schedule</string>
    <string name="navdrawer_item_my_talklist">会话列表</string>
    <string name="navdrawer_item_my_friend">我的好友</string>
    <string name="navdrawer_item_my_care">特别关注</string>
    <string name="navdrawer_item_my_note">心得日志</string>
    <string name="navdrawer_item_my_beautiful">美乐美文</string>
    <string name="navdrawer_item_people_ive_met">People I\'ve Met</string>
    <string name="navdrawer_item_people_ive_met_a11y">People I\'ve Met</string>
    <string name="navdrawer_item_settings">设置</string>
    <string name="navdrawer_item_sign_in">Sign in</string>
    <string name="navdrawer_item_social">Social</string>
    <string name="navdrawer_item_video_library">视频</string>
    <string name="pref_show_location_title">接收每日美文美乐推送</string>
    <string name="pref_show_location_summar">如果选中，你的设备会接收美乐美文的推送，你会在第一时间接收到每天最新的文章和音乐通知。</string>
    <string name="pref_show_network_title">同步心得日志到服务端(wifi情况下)</string>
    <string name="pref_show_network_summar">如果选中，你的设备中新增的日记会在wifi网络下自动上传到服务端，备份，妈妈再也不用担心我的日记丢失了。</string>
    <string name="pref_notify_voice_title">消息提示音</string>
    <string name="pref_notify_voice_summar">如果选中，在收到通知消息和推送时会发出提示音，否则只会震动。</string>
    <string name="pref_receive_pic_title">2G/3G/4G下自动接收图片</string>
    <string name="pref_receive_pic_summar">如果选中，你的设备在2G/3G/4G下页会自动接收图片，会耗费一定流量。</string>
    <string name="pref_show_notify_title">通知显示消息内容</string>
    <string name="pref_show_notify_summar">如果选中，在接收到消息通知时通知栏会显示消息内容。</string>
    <string name="pref_show_lockscreen_title">锁屏显示消息弹框</string>
    <string name="pref_show_lockscreen_summar">如果选中，在设备锁屏时收到通知，会覆盖锁屏，显示通知界面。</string>
    <string name="pref_quit_msg_title">退出后仍然接收消息通知</string>
    <string name="pref_quit_msg_summar">如果选中，程序在退出时会在后台运行，接收最新消息，以免错过重要信息。</string>
</resources>